methods.picture.PictureMono2.scala.error
Compilation error:
PictureMono2:1: error: Missing closing brace `}' assumed here
override def run() {
^PictureMono2:1: error: expected start of definition
override def run() {
         ^PictureMono2:6: error: expected class or object definition
def square() {
^PictureMono2:15: error: expected class or object definition
def makeV() {
^PictureMono2:27: error: expected class or object definition
def lines() {
^